[package]
name = "dx12-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
raw-window-handle = "0.4.3"
gpu-allocator = "0.17.0"
hassle-rs = "0.9.0"
rayon = "1.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_ecs = "0.7.0"
glam = { version = "0.20.5", features = ["serde"] }
image = "0.24.2"
gltf = "1.0.0"
lz4 = "1.23.1"
native-dialog = "0.6.3"
itertools = "0.10.2"

[dependencies.windows]
version = "0.36.1"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Hlsl",
    "Win32_UI_WindowsAndMessaging",
]

